# tauri-2-test

./: README.md  package.json  postcss.config.cjs
.github/instructions/: tauri_app.instructions.md  tauri_commands.instructions.md
src/: App.css  App.tsx  queryClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  save_load.rs  saved_folders.rs  state_manager.rs  test.rs  todo.rs
src-tauri/src/config/: config_cmd.rs  mod.rs  nvidia_detection.rs
src-tauri/src/files_in_dirs/: commands.rs  file.rs  files_in_dirs_cmd.rs  mod.rs  model.rs
src-tauri/src/serde_utils/: mod.rs
src-tauri/src/task_queue/: mod.rs  task.rs  task_handlers.rs  task_queue.rs
src-tauri/src/thumb_gen/: mod.rs  thumb_gen.rs  thumb_gen_cmd.rs  thumb_store.rs  thumbnail.rs
src-tauri/src/video/: analyze.rs
src/components/: Layout.module.css  Layout.tsx  StackContainer.tsx
src/routes/: router.ts  router.tsx
src/routes/config/: Config.tsx
src/routes/debug/: Debug.tsx
src/routes/saved-dirs/: SavedDirs.tsx
src/routes/saved-folders/: AddSavedFolder.tsx  FilesInDirs.type.ts  SavedFolder.module.css  SavedFolder.tsx  SavedFolders.tsx  getPreviewThumbsForSavedFolder.ts  useDirs.ts
src/routes/todos/: Todos.tsx
src/routes/viewer/: Dir.module.css  Dir.tsx  Dirs.tsx  Viewer.tsx  dirs.module.css
src/routes/viewer-dir/: File.module.css  File.tsx  ViewerDir.module.css  ViewerDir.tsx
src/routes/viewer-dir/file/: File.module.css  File.tsx  FilePlaceholder.module.css  FilePlaceholder.tsx  Thumbnail.tsx  useCursorSeekThumbnail.ts
src/routes/viewer-dir/file-preview/: FilePreview.module.css  FilePreview.tsx
src/stores/: currentPreview$.ts  current_preview.ts  previewSrcStore.ts
src/types/: tauriEvent.type.ts
src/util/: env.ts  pathSlash.ts  showErrorNotification.ts  splitPathAndFilename.ts  util.ts
