[package]
name = "tauri-2-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_2_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = "2.0.6"
ffprobe = { git = "https://github.com/theduke/ffprobe-rs", rev = "2ae4a53d7ebe836045c69c404282098adf1873ac" }
nanoid = "0.4.0"
rmp-serde = "1.3.0"
image = { version = "0.25.6", features = ["jpeg", "png", "webp", "avif"] }
tauri-plugin-os = "2"

